# ai-superpower

./: .coverage  README-dev-zh.md  README-zh.md  README.md  app.js  debug_undo.py  index.html  proposals.csv  pyproject.toml
.github/workflows/: deploy.yml
db/: projects.csv  proposals.csv
deploy/: install.sh
site/data/: projects.csv  proposals.csv
src/ai_superpower/: cli.py  client.py  config.py  models.py  replay.py  server.py  storage.py  tui.py
src/ai_superpower.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_superpower/static/: app.js  style.css
src/ai_superpower/templates/: audit.html  index.html  settings.html
src/ai_superpower/templates/projects/: list.html
src/ai_superpower/templates/proposals/: list.html
tests/: conftest.py  test_api.py  test_api_scenarios.py  test_backup.py  test_client.py  test_curl_requests.sh  test_duplicate_detection.py  test_merge_by_project.py  test_models.py  test_new_features.py  test_project_local_path.py  test_proposal_timestamps.py  test_replay.py  test_replay_api.py  test_storage.py  test_sync_coverage_boost.py  test_sync_github_pages.py  test_sync_settings.py  test_sync_to_prj.py
workspace-pm/proposals/: P-20250523-003-prd.md  P-20260525-001-prd.md  P-20260526-002-prd.md
